...
                                                <rect key="frame" x="0.0" y="0.0" width="44" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="44" id="VoV-64-flR"/>
                                                    <constraint firstAttribute="height" constant="30" id="bNu-Ia-PU9"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Bariol-Regular" family="Bariol" pointSize="15"/>
                                                <state key="normal" backgroundImage="emptyFlag">
                                                    <color key="titleColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <segue destination="pOP-tT-AL4" kind="presentation" identifier="DestCountrySelSegue" id="2C5-KS-ZBH"/>
                                                </connections>
                                            </button>
...
                                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xJk-3p-jwp">
                                                                    <rect key="frame" x="0.0" y="53" width="100" height="20"/>
                                                                    <subviews>
                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ZA" translatesAutoresizingMaskIntoConstraints="NO" id="x1w-TK-2dp">
                                                                            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                                            <constraints>
                                                                                <constraint firstAttribute="height" constant="20" id="kj8-ug-GlY"/>
                                                                                <constraint firstAttribute="width" constant="20" id="uFi-dY-SHu"/>
                                                                            </constraints>
                                                                        </imageView>
...
                                                <rect key="frame" x="300" y="0.0" width="75" height="59"/>
                                                <color key="backgroundColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="akn-aO-2Gq" secondAttribute="height" multiplier="75:59" id="APn-Ib-vbR"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Bariol-Regular" family="Bariol" pointSize="20"/>
                                                <state key="normal" title="close">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="closeCalculatorViewPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PnZ-By-hwA"/>
                                                </connections>
                                            </button>
...
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vni-7o-eIz">
                                <rect key="frame" x="0.0" y="366" width="375" height="28"/>
                                <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Comparison">
                                    <color key="titleColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="compareBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZCo-8s-lTA"/>
                                </connections>
                            </button>
...
