...
        
        self.decimalEnabled = true
        decimalBtn.isUserInteractionEnabled = true
        
        calculationLbl.text = "Swipe right to reset numbers"
        self.swipeInstructLbl.alpha = 0
        baseCurrencyLbl.text = "Tap for Pad"
        destinationCurrencyLbl.text = "0"
        onceOffTap = false
        onceOffTapInstruction = true
        
        self.cokeDestLbl.text = ""
        self.domBeerDestLbl.text = ""
...
